force-app/main/default/objects/Temporal_Tripulaciones_Cesiones__c/Temporal_Tripulaciones_Cesiones__c.object-meta.xml
<CustomObject>
    <label>Temporal Tripulacion Cesion</label>
    <nameField>
        <label>Temporal Tripulacion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Tripulaciones Cesion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>