force-app/main/default/objects/Temporal_Tripulaciones_Cesiones__c/fields/TP_FECPRE__c.field-meta.xml
<CustomField>
    <fullName>TP_FECPRE__c</fullName>
    <label>TP_FECPRE</label>
    <type>Date</type>
</CustomField>