force-app/main/default/objects/Temporal_Tripulaciones_Cesiones__c/fields/TP_NUMTRP__c.field-meta.xml
<CustomField>
    <fullName>TP_NUMTRP__c</fullName>
    <label>TP_NUMTRP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>