force-app/main/default/objects/Temporal_Tripulaciones_Cesiones__c/fields/TP_TIPALU__c.field-meta.xml
<CustomField>
    <fullName>TP_TIPALU__c</fullName>
    <label>TP_TIPALU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>